@@ -5,10 +5,13 @@
     <title>CassiaJS Example</title>
     <script src="cassia.js"></script>
     <script type="text/javascript">
-        var messaggio = "Super-secret Message";
-        document.write("<strong>Original Message:</strong> " + messaggio + "<br/>");
-        document.write("<strong>Cassia.cesare.encrypt(message):</strong> " + Cassia.cesare.encrypt(messaggio) + "<br/>");
-        document.write("<strong>Cassia.albam.encrypt(message):</strong> " + Cassia.albam.encrypt(messaggio) + "<br/>");
+        var messaggio = "Super-secret Message that must to be secret and readable only by the authorized personnel. Don't read!";
+        document.write("<table style=\"width: 100%;  border:1px dotted black;\"><tbody><tr><td style=\"width: 30%; border:1px dotted black;\"><strong>Original Message:</strong></td><td style=\"border:1px dotted black;\">" + messaggio + "</td></tr>");
+        document.write("<tr><td style=\"width: 30%; border:1px dotted black;\"><strong>Cassia.albam.encrypt(message):</strong></td><td style=\"border:1px dotted black;\">" + Cassia.albam.encrypt(messaggio) + "</td></tr>");
+        document.write("<tr><td style=\"width: 30%; border:1px dotted black;\"><strong>Cassia.carbonaro.encrypt(message):</strong></td><td style=\"border:1px dotted black;\">" + Cassia.carbonaro.encrypt(messaggio) + "</td></tr>");
+        document.write("<tr><td style=\"width: 30%; border:1px dotted black;\"><strong>Cassia.atbash.encrypt(message):</strong></td><td style=\"border:1px dotted black;\">" + Cassia.atbash.encrypt(messaggio) + "</td></tr>");
+        document.write("<tr><td style=\"width: 30%; border:1px dotted black;\"><strong>Cassia.cesare.encrypt(message):</strong></td><td style=\"border:1px dotted black;\">" + Cassia.cesare.encrypt(messaggio) + "</td></tr>");
+        document.write("</tbody></table>");
     </script>
 </head>
 <body>
