@@ -2,6 +2,13 @@ CassiaJS Changelog
 
 Copyright (c) 2012 Daniele Veneroni. Released under MIT License
 
-Version 1.0.0
+Version 05/12/2012
 
-• First Release
+• Add Alfabeto Carbonaro
+• Add Atbash
+
+Version 04/12/2012
+
+• Initial Commit
+• Add Caesar Cipher
+• Add Albam Cipher
